--- a/package.json
+++ b/package.json
@@ -25,11 +25,13 @@
     "@angular/platform-browser": "^6.0.1",
     "@angular/platform-browser-dynamic": "^6.0.1",
     "@angular/router": "^6.0.1",
-    "@ngx-translate/core": "^10.0.1",
-    "@ng-bootstrap/ng-bootstrap": "^2.0.0",
-    "bootstrap": "^4.1.1",
     "@fortawesome/fontawesome-free-webfonts": "^1.0.9",
+    "@ng-bootstrap/ng-bootstrap": "^2.0.0",
+    "@ngx-translate/core": "^10.0.1",
+    "bootstrap": "^4.1.1",
     "core-js": "^2.5.6",
+    "devextreme": "18.1.5",
+    "devextreme-angular": "^18.1.5",
     "lodash": "^4.17.10",
     "rxjs": "^6.1.0",
     "zone.js": "^0.8.26"
